feat: 테이블 entity 구조 추가 및 카카오 로그인 기능 구현
